# apus

./: .gitignore  .pre-commit-config.yaml  .swiftlint-report.json  .swiftlint.yml  AGENTS.md  BuildInstructions.md  CAMERA_DEPENDENCY_FIX.md  CLAUDE.md  CONTOUR_DETECTION_IMPROVEMENTS.md  CONTOUR_DETECTION_MOCK_FIXES.md  FINAL_CIRCULAR_DEPENDENCY_FIX.md  FINAL_SUMMARY.md  GEMINI.md  IMAGE_CLASSIFICATION_FIXES.md  IMAGE_NORMALIZATION_IMPROVEMENTS.md  OCR_FIXES_AND_ENHANCEMENTS.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_UNIT_TESTS_SUMMARY.md  Podfile  README.md  REFACTORING_SUMMARY.md  RESULTS_SYSTEM_IMPLEMENTATION_SUMMARY.md  SETTINGS_PERFORMANCE_DEEP_ANALYSIS.md  UNIFIED_OBJECT_DETECTION_IMPLEMENTATION.md  UNIT_TESTS_SUMMARY.md  VISION_OBJECT_DETECTION_IMPLEMENTATION.md  build.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: swiftlint.yml
apus/: CameraView.swift  ContentView.swift  Info.plist  ObjectDetectionManager.swift  ObjectDetectionProtocol.swift  PreviewView.swift  SettingsView.swift
apus.xcodeproj/: project.pbxproj
apus.xcworkspace/: contents.xcworkspacedata
apus/App/: AppDependencies.swift  apusApp.swift
apus/Resources/: Info.plist
apus/Services/: DetectionResultsManager+AsyncLoading.swift  DetectionResultsManager+Barcode.swift  DetectionResultsManager+Classification.swift  DetectionResultsManager+Contour.swift  DetectionResultsManager+Helpers.swift  DetectionResultsManager.swift  (+6 more)
apusTests/: README.md  apusTests.swift
apusUITests/: apusUITests.swift  apusUITestsLaunchTests.swift
scripts/: README.md  convert_yolov12_to_coreml.py
(+86 files in other folders)
