[project]
name = "apus-ml-tools"
version = "0.1.0"
description = "Utilities for converting ML models for the apus iOS app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "onnx==1.16.2",
  "coremltools>=7.0",
  "tqdm>=4.66",
  "requests>=2.31",
  # Optional, used if present for a simpler export path
  "ultralytics>=8.2; platform_system != 'Darwin' or python_version >= '3.9'",
]

[tool.uv]
dev-dependencies = []
python-preference = "managed"

[tool.uv.sources]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apus_ml_tools"]

[tool.hatch.build.targets.sdist]
include = []
